[gd_scene load_steps=22 format=3 uid="uid://pcyeheujjs2u"]

[ext_resource type="Theme" uid="uid://ccb43p0cholhl" path="res://assets/fonts/hud_theme.tres" id="1_pfcb4"]
[ext_resource type="Script" uid="uid://cc0cu1ltwwmfr" path="res://world/inspector_view.gd" id="2_egv6f"]
[ext_resource type="Texture2D" uid="uid://b5hxg47cxerx8" path="res://assets/Kenney/panelInset_brown.png" id="3_t3uc6"]
[ext_resource type="Script" uid="uid://b4abs06ny38us" path="res://world/inspector_stats.gd" id="4_j7vxr"]
[ext_resource type="Texture2D" uid="uid://d0m42f3v11ujx" path="res://assets/icons/heart_red.svg" id="5_qekuf"]
[ext_resource type="Texture2D" uid="uid://cs84m6bwbdaso" path="res://assets/icons/leaf_maple.svg" id="6_76id0"]
[ext_resource type="Texture2D" uid="uid://ds4ossxfmefjy" path="res://assets/icons/sun.svg" id="7_k3gto"]
[ext_resource type="Texture2D" uid="uid://djt62asfsp1dj" path="res://assets/icons/gloves.svg" id="8_65c6l"]
[ext_resource type="Script" uid="uid://dirkwllnloavu" path="res://controls/plant_action_menu.gd" id="9_rlbyr"]
[ext_resource type="Script" uid="uid://d2tsjt0ons6sb" path="res://actions/plant_action.gd" id="10_t8f7u"]
[ext_resource type="Resource" uid="uid://cqlywhuyv1od1" path="res://actions/saved/connect.tres" id="11_sqkeq"]
[ext_resource type="Resource" uid="uid://cuys1u5ulmeaw" path="res://actions/saved/revive.tres" id="12_q38ig"]
[ext_resource type="Resource" uid="uid://c6c8ooufxmswc" path="res://actions/saved/grow.tres" id="13_64iv1"]
[ext_resource type="Resource" uid="uid://c574ibw4t3lca" path="res://actions/saved/nurture.tres" id="14_drcps"]
[ext_resource type="PackedScene" uid="uid://yqxqtf53b5k2" path="res://controls/action_button.tscn" id="15_rqwvw"]
[ext_resource type="Script" uid="uid://dy1gxjbfwjo62" path="res://actions/config/action_connect_config.gd" id="16_h70mr"]
[ext_resource type="Texture2D" uid="uid://r4mkox7jl14w" path="res://assets/Kenney/buttonSquare_brown.png" id="17_a883l"]
[ext_resource type="Texture2D" uid="uid://cqk6m8nnnk0kf" path="res://assets/Kenney/buttonSquare_brown_pressed.png" id="18_h2yhp"]
[ext_resource type="Texture2D" uid="uid://cwu75we5ihhbl" path="res://assets/Kenney/zoom.png" id="19_p6c5s"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ftqqi"]
load_path = "res://.godot/imported/panel_beige.png-a48bd632f34a380bd319cb316fc75f8e.ctex"

[sub_resource type="Resource" id="Resource_2tavo"]
script = ExtResource("16_h70mr")
id = ""
label = "Connect"
priority = 0
metadata/_custom_type_script = "uid://dy1gxjbfwjo62"

[node name="InspectorView" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_pfcb4")
script = ExtResource("2_egv6f")

[node name="Panel" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.796078)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.45
anchor_right = 0.9
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("CompressedTexture2D_ftqqi")
expand_mode = 2

[node name="StatsPanel" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_t3uc6")

[node name="Stats" type="GridContainer" parent="Panel/StatsPanel"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.048
anchor_top = 0.112
anchor_right = 0.957
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
columns = 2
script = ExtResource("4_j7vxr")

[node name="HealthIcon" type="TextureRect" parent="Panel/StatsPanel/Stats"]
layout_mode = 2
texture = ExtResource("5_qekuf")
expand_mode = 3

[node name="HealthBar" type="ProgressBar" parent="Panel/StatsPanel/Stats"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="LeafIcon" type="TextureRect" parent="Panel/StatsPanel/Stats"]
layout_mode = 2
texture = ExtResource("6_76id0")
expand_mode = 3

[node name="LeafLabel" type="Label" parent="Panel/StatsPanel/Stats"]
layout_mode = 2
text = "?? / ??"
horizontal_alignment = 1

[node name="EnergyIcon" type="TextureRect" parent="Panel/StatsPanel/Stats"]
layout_mode = 2
texture = ExtResource("7_k3gto")
expand_mode = 3

[node name="EnergyLabel" type="Label" parent="Panel/StatsPanel/Stats"]
layout_mode = 2
text = "+0/s"
horizontal_alignment = 1

[node name="NurtureIcon" type="TextureRect" parent="Panel/StatsPanel/Stats"]
layout_mode = 2
texture = ExtResource("8_65c6l")
expand_mode = 3

[node name="NurtureLabel" type="Label" parent="Panel/StatsPanel/Stats"]
layout_mode = 2
text = "+0"
horizontal_alignment = 1

[node name="ActionMenu" type="GridContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.53
anchor_right = 0.9
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
columns = 2
script = ExtResource("9_rlbyr")
all_actions = Array[ExtResource("10_t8f7u")]([ExtResource("11_sqkeq"), ExtResource("12_q38ig"), ExtResource("13_64iv1"), ExtResource("14_drcps")])
action_button_scene = ExtResource("15_rqwvw")

[node name="ActionButton" parent="Panel/ActionMenu" instance=ExtResource("15_rqwvw")]
layout_mode = 2
_action = SubResource("Resource_2tavo")

[node name="ActionButton2" parent="Panel/ActionMenu" instance=ExtResource("15_rqwvw")]
layout_mode = 2
_action = SubResource("Resource_2tavo")

[node name="ActionButton3" parent="Panel/ActionMenu" instance=ExtResource("15_rqwvw")]
layout_mode = 2
_action = SubResource("Resource_2tavo")

[node name="ActionButton4" parent="Panel/ActionMenu" instance=ExtResource("15_rqwvw")]
layout_mode = 2
_action = SubResource("Resource_2tavo")

[node name="InspectButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(90, 70)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.861
anchor_right = 0.5
anchor_bottom = 0.861
offset_left = -22.5
offset_top = -50.0
offset_right = 22.5
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource("17_a883l")
texture_hover = ExtResource("18_h2yhp")
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="InspectButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -30.0
offset_right = 25.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("19_p6c5s")
expand_mode = 5
stretch_mode = 3

[connection signal="toggled" from="InspectButton" to="." method="_on_inspect_button_toggled"]
